[package]
name = "untitled1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = {version="0.8.5", features=["rustls"]}
rustls = {version="0.20.3", features=["dangerous_configuration", "quic"]}
rcgen = "0.9.1"
futures-util = "0.3.21"
tokio = {version = "1.17.0", features = ["full"]}
bytes = "1.1.0"